# rules_nfpm

./: README.md
docs/: readme-header.md
example/: BUILD.bazel  README.md
go/internal/gazelle/: BUILD.bazel  main.go
nfpm/: BUILD.bazel
scripts/: BUILD.bazel
tests/: BUILD.bazel
