load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gazelle",
    srcs = ["main.go"],
    importpath = "github.com/ericnorris/rules_nfpm/go/internal/gazelle",
    visibility = ["//:__subpackages__"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)
